# AuthorServer

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  reload.sh
authorserver/: Dockerfile  anonymizeCourseData.py  author_forms.py  gitconfig  main.py  models.py  pyproject.toml  start-web.sh  worker.py
authorserver/static/: main.js
authorserver/templates/: anonymize_data.html  editlibrary.html  home.html  logfiles.html
project/: Dockerfile  anonymizeCourseData.py  authorImpact.py  author_forms.py  main.py  models.py  pyproject.toml  requirements.txt  start-web.sh  start-worker.sh  worker.py
project/static/: main.css  main.js
project/templates/: _base.html  anonymize_data.html  editlibrary.html  home.html  impact.html  logfiles.html  subchapmap.html
